refactor structure dossiers

--- a/02-Architectures/source.tex
+++ b/02-Architectures/source.tex
@@ -1,5 +1,5 @@
-%!TEX root = ../main.tex
 \documentclass[../main]{subfiles}
+
 \ifSubfilesClassLoaded{
     \addbibresource{../Biblio/biblio.bib}
     \dominitoc
@@ -7,8 +7,8 @@
     \pagenumbering{arabic}
     \setcounter{page}{1}
 }{}
+
 \begin{document}
-%\graphicspath{{\subfix{/02-Architectures/figures}}}
 \graphicspath{{./figures},{02-Architectures/figures}}
 \chapter{Architectures de cartes auto-organisatrices}
 \minitoc
@@ -77,21 +77,19 @@ Par son aspect ordonné, une carte est une représentation en faible dimension d
 \begin{figure}
     \centering
     \includegraphics{SOM.pdf}
-    \caption{Elements principaux composant une carte de Kohonen: une carte prend une entrée $X$, un ensemble d'unités de poids $\omega$ et indexées par une position $p$~; une activité $a$ ou une distance $d$ est calculée pour chaque unité par rapport à l'entrée. La Best Matching Unit, abrégée en BMU, est calculée comme l'unité d'activité maximale sur les positions (ou de distance minimale). Sa position est notée $\bmu$ et son poids est ainsi $\w(\bmu)$.  \label{fig:SOM}}
+    \caption{Elements principaux composant une carte de Kohonen: une carte prend une entrée $X$, un ensemble d'unités de poids $\omega$ et indexées par une position $p$~; une activité $a$ ou une distance $d$ est calculée pour chaque unité par rapport à l'entrée. La Best Matching Unit, abrégée en BMU, est calculée comme l'unité d'activité maximale sur les positions (ou de distance minimale). Sa position est notée $\bmu$ et son poids est ainsi $\w(\bmu)$.\label{fig:SOM}}
     \end{figure}
 
     \begin{figure}
         \centering
         \includegraphics[width=0.7\textwidth]{som2d}
         \caption{Dépliement d'une SOM 2D sur des données dans le plan $[0,1]^2$, \cite{Kohonen1995SelfOrganizingM} \label{fig:som2d}}
-        
         \end{figure}
         
         \begin{figure}
         \centering
         \includegraphics[width=0.7\textwidth]{som1d}
         \caption{Dépliement d'une SOM 1D sur des données dans un triangle 2D, \cite{Kohonen1995SelfOrganizingM}\label{fig:som1d}}
-        
         \end{figure}
 
 \begin{figure}
@@ -143,8 +141,8 @@ Une carte de Kohonen ne doit cependant pas être considérée comme une modélis
 \begin{figure}
 \centering
 \includegraphics[width=0.6\textwidth]{v1.jpg}
-\caption{Représentation des réponses du cortex visuel V1 à un stimulus visuel (bâtonnets d'orientations spatiales différentes). Les neurones répondant à une certaine orientation sont affichés de la même couleur. On observe une continuité entre les neurones proches dans le cortex et l'orientation à laquelle ils répondent. Cette propriété d'organisation est l'inspiration biologique des cartes de Kohonen.}
-\label{fig:v1}
+\caption{Représentation des réponses du cortex visuel V1 à un stimulus visuel (bâtonnets d'orientations spatiales différentes). Les neurones répondant à une certaine orientation sont affichés de la même couleur. On observe une continuité entre les neurones proches dans le cortex et l'orientation à laquelle ils répondent. Cette propriété d'organisation est l'inspiration biologique des cartes de Kohonen.\label{fig:v1}}
+
 \end{figure}
 
 \subsection{Rétroactions dans le traitement de l'information multisensorielle du cortex}
@@ -206,7 +204,7 @@ Cette notion d'entrée et sorties interne à l'architecture constitue les règle
 \begin{figure}
     \centering
     \includegraphics[width=0.7\textwidth]{module.pdf}
-    \caption{Description de la notion de module d'une architecture modulaire. Un module prend des entrées externes à l'architecture ou internes, et possède des variable d'état dont l'évolution dans le temps est régie par des règles de mise à jour ou équations d'évolution. La sortie d'un module est un ensemble de variable d'états. La sortie d'un module et l'entrée interne d'une autre constitue l'interface entre modules. Les modules étudiés dans ce chapitre sont des cartes de Kohonen. Leurs variables d'état sont entre autre leur poids et leur BMU.\label{fig:module} }
+    \caption{Description de la notion de module d'une architecture modulaire. Un module prend des entrées externes à l'architecture ou internes, et possède des variable d'état dont l'évolution dans le temps est régie par des règles de mise à jour ou équations d'évolution. La sortie d'un module est un ensemble de variable d'états. La sortie d'un module et l'entrée interne d'une autre constitue l'interface entre modules. Les modules étudiés dans ce chapitre sont des cartes de Kohonen. Leurs variables d'état sont entre autre leur poids et leur BMU.\label{fig:module}}
 \end{figure}
 
 \subsection{Méthode d'analyse}
@@ -337,7 +335,7 @@ La carte du niveau supérieur apparaît comme une représentation abstraite des 
 Un point clé dans la construction de ces architectures repose sur l'information transmise entre couche. 
 Cette information doit permettre de véhiculer un maximum d'information entre cartes, tout en étant interprétable par les autres cartes.
 Les architectures HSOM et ses dérivées utilisent ainsi la position du BMU en tant que représentation.
-Par le choix de la position du BMU comme vecteur de transmission d'information, HSOM exploite totalement l'aspect topologique qu'offrent les cartes de Kohonen. Cette information est par ailleurs relative à une carte et non un type d'entrée ce qui en fait une interface très générique. Enfin, il s'agit d'une position 1D ou 2D, donc une information légère.{
+Par le choix de la position du BMU comme vecteur de transmission d'information, HSOM exploite totalement l'aspect topologique qu'offrent les cartes de Kohonen. Cette information est par ailleurs relative à une carte et non un type d'entrée ce qui en fait une interface très générique. Enfin, il s'agit d'une position 1D ou 2D, donc une information légère.
 Le poids du BMU apparaît également comme une méthode de transmission d'information au sein des SOMs hiérarchiques \cite{wang_comparisonal_2007, gunes_kayacik_hierarchical_2007, dozono_convolutional_2016}.
 Par exemple, \cite{dozono_convolutional_2016} décomposent une image d'entrée en imagettes qui sont utilisées en tant qu'entrées d'une première couche de cartes. 
 Après apprentissage de cette couche, l'image est reconstruite grâce aux poids des BMU, puis décomposée en imagettes de tailles différentes pour être soumise à la deuxième couche de carte.
@@ -643,9 +641,9 @@ Les modèles de cartes récurrentes existant dans la littérature s'appuient sur
 L'information transmise entre ces états rejoint les mécanismes relevés dans les architectures multi-cartes~: transmission du BMU en tant qu'entrée, transmission d'une activité, transmission du poids du BMU.
 
 Parmi les premiers travaux autour des cartes auto-organisatrices, les cartes de Kohonen Temporelles TKM, dérivées ensuite en \emph{recurrent SOM} \cite{varsta_temporal_2001} utilisent l'activité $a$ d'une carte à l'instant précédent dans le calcul de l'activité à l'instant courant par un modèle d'intégrateur à fuite.
-$$a(p,t) = (1-\alpha)a(p,t-1) + \alpha(\inpx_t - \w_t(p)) $$
+$$a(p,t) = (1-\alpha)a(p,t-1) + \alpha(\inpx_t - \w_t(p))$$
 avec $a$ équivalent ici à une distance modifiée entre un prototype et l'entrée.
-Le BMU est alors calculé par $\Pi_t = min(|| a(p,t) || ^2)$.
+Le BMU est alors calculé par $\Pi_t = min(|| a(p,t) ||^2)$.
 Le calcul de l'activité revient donc, au lieu de chercher la position donc le prototype $\w(p)$ est le plus proche de l'entrée $\inpx_t$, à chercher une position pour laquelle la distance entre le prototype et l'entrée est faible et pour laquelle la distance calculée par rapport aux entrées précédentes l'était aussi. Il s'agit d'un intégrateur à fuite dans la mesure ou l'influence de l'activité d'un instant sur les suivants décroit au cours du temps.
 
 D'autres travaux reposent sur la transmission d'une information en tant qu'entrée, prise en compte dans le calcul de l'activité.
@@ -703,7 +701,7 @@ Ce modèle permet alors d'apprendre des séquences d'entrée. Alors qu'une carte
 \begin{figure}
     \centering
     \includegraphics[width=0.7\textwidth]{baheux.pdf}
-    \caption{Structures de deux cartes auto-organisatrices communicantes, \cite{baheux_towards_2014}. Chaque carte est composée de trois couches d'activités, représentées séparément sur le schéma: sur la première carte, une activité est relative à l'entrée $o$, l'observation. L'autre activité reçoit une entrée descendant de la seconde carte. Ces deux activités sont fusionnées en une activité globale servant à déterminer un BMU. La seconde carte reçoit ensuite deux entrées venant de la première carte : le BMU de l'état courant et le BMU de l'état précédent. Un système de résonance est mis en place pour gérer les boucles de rétroactions entre BMUs, comme chaque carte reçoit le BMU de l'état courant de l'autre carte en entrée. Ce principe laisse évoluer dynamiquement les activités vers un état stable, utilisé ensuite pour la détermination du BMU final.\label{fig:baheux}}
+    \caption{Structures de deux cartes auto-organisatrices communicantes, \cite{baheux_towards_2014}. Chaque carte est composée de trois couches d'activités, représentées séparément sur le schéma: sur la première carte, une activité est relative à l'entrée $X$, l'observation. L'autre activité reçoit une entrée descendant de la seconde carte. Ces deux activités sont fusionnées en une activité globale servant à déterminer un BMU. La seconde carte reçoit ensuite deux entrées venant de la première carte~: le BMU de l'état courant et le BMU de l'état précédent. Un système de résonance est mis en place pour gérer les boucles de rétroactions entre BMUs, comme chaque carte reçoit le BMU de l'état courant de l'autre carte en entrée. Ce principe laisse évoluer dynamiquement les activités vers un état stable, utilisé ensuite pour la détermination du BMU final.\label{fig:baheux}}
 \end{figure}
 
 
@@ -725,7 +723,6 @@ Le tableau \ref{tab:bib} présente ainsi une comparaison des structures des prin
     \renewcommand{\arraystretch}{1.5}
     \caption{Comparaison des principaux modèles d'architectures relevés dans ce chapitre. Nous n'y faisons pas figurer les architectures sélectives, étant non-modulaires. Les modèles très similaires sont regroupées sur une seule ligne. \label{tab:bib}}
     \vspace{5mm}
-    \begin{threeparttable}
     \begin{tabular}{p{2cm}p{6cm}p{2cm}p{5cm}}
         Modèle& Type& Mise à jour& Mode de transmission    \\
         HSOM\tnote{1}& Hiérarchique & Séquentielle & Position du BMU  \\
@@ -760,15 +757,14 @@ Le tableau \ref{tab:bib} présente ainsi une comparaison des structures des prin
         \item[7]  \cite{johnsson_associating_2008}
     \end{itemize} & 
     \begin{itemize}\footnotesize
-        \item[8] { \cite{lefort_active_2015}}
-        \item[9] {\cite{varsta_temporal_2001}} 
-        \item[10] {\cite{Strickert2005MergeSF}}
-        \item[11] {\cite{Buonamente2013SimulatingAW}}
-        \item[12] {\cite{Voegtlin2002RecursiveSM}}
+        \item[8] \cite{lefort_active_2015}
+        \item[9] \cite{varsta_temporal_2001}
+        \item[10] \cite{Strickert2005MergeSF}
+        \item[11] \cite{Buonamente2013SimulatingAW}
+        \item[12] \cite{Voegtlin2002RecursiveSM}
         \item[13] \cite{hammer_self-organizing_2005}
-    \end{itemize} \\
+    \end{itemize}
 \end{tabular}
-\end{threeparttable}
 \end{table}
 
 
@@ -788,7 +784,7 @@ Une architecture générale incluant le traitement de séquence doit nécessaire
 Nous proposerons donc une architecture non-hiérarchique décentralisée de cartes de Kohonen, dont les mises à jour se font de façon synchrone. Les travaux que nous avons réalisés portent sur la définition et l'analyse des comportements générés par un tel modèle.
 Nos travaux font ainsi suite à \cite{baheux_towards_2014} sur des architectures récurrentes multimodales utilisant la transmission de la postion du BMU entre des cartes de Kohonen, exploitant la position du BMU.
 Les travaux commencés en \cite{baheux_towards_2014}, bien qu'ils exploitent des connexions intercartes, sont similaires à ce qu'on obtiendrait avec une carte récurrente simple, telle que celle décrite en \cite{fix20}.
-Par leur motivation, qui est le développement d'un système multicarte générique, nos travaux se rapprochent aussi des travaux conduits sur l'architecture A-SOM \cite{johnsson_associating_2008, johnsson_associative_2009,gil_sarasom_2015, Buonamente2015DiscriminatingAS}.
+Par leur motivation, qui est le développement d'un système multicarte générique, nos travaux se rapprochent aussi des travaux conduits sur l'architecture A-SOM~\cite{johnsson_associating_2008, johnsson_associative_2009,gil_sarasom_2015, Buonamente2015DiscriminatingAS}.
 
 Nous dirigerons les travaux vers le traitement de données multimodales dans de petites architectures. Le but de cette thèse est d'identifier et de formaliser les comportements d'apprentissage générés par une petite structure non-hiérarchique, dans une optique de création d'architecture comportant de nombreuses cartes.
 
@@ -797,7 +793,6 @@ Nous dirigerons les travaux vers le traitement de données multimodales dans de 
 \end{figure*}
 
 \ifSubfilesClassLoaded{
-
     \printbibliography
     %\externaldocument{../main.tex}   
 }{}
