--- a/08-Application/source.tex
+++ b/08-Application/source.tex
@@ -6,7 +6,7 @@
     \pagenumbering{arabic}
     \setcounter{page}{1}
 }{}
-
+\begin{document}
 \chapter{Application: prédiction d'entrée manquante}
 \graphicspath{{08-Application/}}
 \minitoc
@@ -118,9 +118,9 @@ Resistance au bruit
 
 Calcul des dépendance entre les entrées et la commande:
 PCA sur les entrées, calcul de MI après apprentissage
+
 \section{Conclusion}
 
 
 
-
-
+\end{document}
