--- a/Biblio/biblio.bib
+++ b/Biblio/biblio.bib
@@ -1157,7 +1157,6 @@
 	title = {{SARASOM}: a supervised architecture based on the recurrent associative {SOM}},
 	volume = {26},
 	shorttitle = {{SARASOM}},
-	abstract = {We present and evaluate a novel supervised recurrent neural network architecture, the SARASOM, based on the associative self-organizing map. The performance of the SARASOM is evaluated and compared with the Elman network as well as with a hidden Markov model (HMM) in a number of prediction tasks using sequences of letters, including some experiments with a reduced lexicon of 15 words. The results were very encouraging with the SARASOM learning better and performing with better accuracy than both the Elman network and the HMM.},
 	language = {en},
 	number = {5},
 	journal = {Neural Computing and Applications},
@@ -1400,4 +1399,28 @@
   journal={Journal of Educational Research},
   volume={2},
   pages={452-456}
+}
+
+@inproceedings{Gonnier2020ConsensusDS,
+  title={Consensus Driven Self-Organization: Towards Non Hierarchical Multi-Map Architectures},
+  author={No{\'e}mie Gonnier and Yann Boniface and Herv{\'e} Frezza-Buet},
+  booktitle={ICONIP},
+  year={2020}
+}
+
+@article{Gonnier2021InputPU,
+  title={Input Prediction Using Consensus Driven SOMs},
+  author={No{\'e}mie Gonnier and Yann Boniface and Herv{\'e} Frezza-Buet},
+  journal={2021 8th International Conference on Soft Computing \& Machine Intelligence (ISCMI)},
+  year={2021},
+  pages={38-42}
+}
+
+@article{Pless2009ASO,
+  title={A Survey of Manifold Learning for Images},
+  author={Robert Pless and Richard Souvenir},
+  journal={IPSJ Trans. Comput. Vis. Appl.},
+  year={2009},
+  volume={1},
+  pages={83-94}
 }
