--- a/main.tex
+++ b/main.tex
@@ -36,7 +36,7 @@
 \usepackage{mathtools}
 \usepackage{subfiles}
 
-%\addbibresource{\subfix{./Biblio/biblio.bib}}
+\addbibresource{\subfix{./Biblio/biblio.bib}}
 %\addbibresource{./Biblio/biblio.bib}
 \input{Notations.tex}
 %compile only a chapter
@@ -53,15 +53,15 @@
 \dominitoc
 \include{titlepage}
 \tableofcontents
-\subfile{00-Introduction/source}
+%\subfile{00-Introduction/source}
 %\subfile{01-Modularite/source}
 \mainmatter
 
-\subfile{02-Architectures/source}
 %Chapitre en plus : multimodalité ?
+\subfile{02-Architectures/source}
 \subfile{03-SOM/source}
 \subfile{04-Representation/source}
-\subfile{05-Indicateur/source}
+%\subfile{05-Indicateur/source}
 \subfile{06-Analyse/source}
 \subfile{07-Relaxation/source}
 \subfile{08-Application/source}
