--- a/thesul-cs.cls
+++ b/thesul-cs.cls
@@ -239,13 +239,8 @@
          
 \RequirePackage[citestyle=ext-authoryear,bibstyle=authortitle, maxcitenames=2,backend=biber,doi=false,url=false,date=year,isbn=false,maxcitenames=2]{biblatex}
 \setlength\bibitemsep{1.5\itemsep}
-\RequirePackage[colorlinks = true,
-linkcolor = blue,
-urlcolor  = blue,
-citecolor = blue,
-anchorcolor = blue]{hyperref}
+\RequirePackage[colorlinks = true, linkcolor = blue, urlcolor  = blue, citecolor = blue, anchorcolor = blue]{hyperref}
 \RequirePackage{subfiles}
-
 
 \newcommand\ShowLogos{%
         \message{*** \string\ShowLogos\space is now the default ******^^J}}
