--- a/Biblio/biblio.bib
+++ b/Biblio/biblio.bib
@@ -356,7 +356,7 @@
 }
 
 @inproceedings{lefort_active_2015,
-  author     = {Lefort, M. and Gepperth, A.},
+  author     = {Lefort, Mathieu and Gepperth, A.},
   title      = {Active learning of local predictable representations with artificial curiosity},
   booktitle  = {2015 {Joint} {IEEE} {International} {Conference} on {Development} and {Learning} and {Epigenetic} {Robotics} {({ICDL}-{EpiRob})}},
   year       = 2015,
@@ -379,13 +379,6 @@
 
 
 
-
-@article{Liu2015DeepSM,
-  author     = {Liu, N. and Wang, Jinjun and Gong, Yihong},
-  title      = {Deep Self-Organizing Map for visual classification},
-  journal    = {2015 International Joint Conference on Neural Networks (IJCNN)},
-  year       = 2015,
-}
 
 @inproceedings{liu_deep_2015,
   author     = {Liu, Nan and Wang, Jinjun and Gong, Yihong},
@@ -567,7 +560,7 @@
 }
 
 @inproceedings{johnsson_associative_2009,
-  author     = {Johnsson, M. and Balkenius, C. and Hesslow, G.},
+  author     = {Johnsson, Magnus and Balkenius, Christian and Hesslow, Germund},
   title      = {Associative Self-Organizing Map},
   booktitle  = {Proc. {IJCCI}},
   year       = 2009,
@@ -973,7 +966,7 @@
 }
 
 @inproceedings{koikkalainen_self-organizing_1990,
-  author     = {Koikkalainen, P. and Oja, E.},
+  author     = {Koikkalainen, P. and Oja, Erkki},
   title      = {Self-organizing hierarchical feature maps},
   booktitle  = {1990 {IJCNN} {International} {Joint} {Conference} on {Neural} {Networks}},
   year       = 1990,
@@ -1423,4 +1416,72 @@
   year={2009},
   volume={1},
   pages={83-94}
+}
+
+@inproceedings{FrezzaBuet2020SelforganizingMI,
+  title={Self-organizing maps in manifolds with complex topologies: An application to the planning of closed path for indoor UAV patrols},
+  author={Herv{\'e} Frezza-Buet},
+  booktitle={ESANN},
+  year={2020}
+}
+
+
+@article{droniou_deep_2015,
+	title = {Deep unsupervised network for multimodal perception, representation and classification},
+	volume = {71},
+	issn = {09218890},
+	doi = {10.1016/j.robot.2014.11.005},
+	journal = {Robotics and Autonomous Systems},
+	author = {Droniou, Alain and Ivaldi, Serena and Sigaud, Olivier},
+	month = sep,
+	year = {2015},
+	pages = {83--98},
+	file = {Droniou et al. - 2015 - Deep unsupervised network for multimodal perceptio.pdf:/home/noemie/Zotero/storage/YZRTF523/Droniou et al. - 2015 - Deep unsupervised network for multimodal perceptio.pdf:application/pdf},
+}
+
+@article{Hopfield1982NeuralNA,
+  title={Neural networks and physical systems with emergent collective computational abilities.},
+  author={John J. Hopfield},
+  journal={Proceedings of the National Academy of Sciences of the United States of America},
+  year={1982},
+  volume={79 8},
+  pages={
+          2554-8
+        }
+}
+
+@article{Oudeyer2010OnTI,
+  title={On the Impact of Robotics in Behavioral and Cognitive Sciences: From Insect Navigation to Human Cognitive Development},
+  author={Pierre-Yves Oudeyer},
+  journal={IEEE Transactions on Autonomous Mental Development},
+  year={2010},
+  volume={2},
+  pages={2-16}
+}
+
+@ARTICLE{8451965,
+  author={Taniguchi, Tadahiro and Ugur, Emre and Hoffmann, Matej and Jamone, Lorenzo and Nagai, Takayuki and Rosman, Benjamin and Matsuka, Toshihiko and Iwahashi, Naoto and Oztop, Erhan and Piater, Justus and Wörgötter, Florentin},
+  journal={IEEE Transactions on Cognitive and Developmental Systems}, 
+  title={Symbol Emergence in Cognitive Developmental Systems: A Survey}, 
+  year={2019},
+  volume={11},
+  number={4},
+  pages={494-516},
+  doi={10.1109/TCDS.2018.2867772}
+}
+
+
+@incollection{cangelosi_embodied_2015,
+	address = {Berlin, Heidelberg},
+	title = {Embodied {Intelligence}},
+	isbn = {978-3-662-43505-2},
+	url = {https://doi.org/10.1007/978-3-662-43505-2_37},
+	abstract = {Embodied intelligence is the computational approach to the design and understanding of intelligent behavior in embodied and situated agents through the consideration of the strict coupling between the agent and its environment (situatedness), mediated by the constraints of the agent's own body, perceptual and motor system, and brain (embodiment). The emergence of the field of embodied intelligence is closely linked to parallel developments in computational intelligence and robotics, where the focus is on morphological computation and sensory–motor coordination in evolutionary robotics models, and in neuroscience and cognitive sciences where the focus is on embodied cognition and developmental robotics models of embodied symbol learning. This chapter provides a theoretical and technical overview of some principles of embodied intelligence, namely morphological computation, sensory–motor coordination, and developmental embodied cognition. It will also discuss some tutorial examples on the modeling of body/brain/environment adaptation for the evolution of morphological computational agents, evolutionary robotics model of navigation and object discrimination, and developmental robotics models of language and numerical cognition in humanoid robots.},
+	booktitle = {Springer {Handbook} of {Computational} {Intelligence}},
+	publisher = {Springer Berlin Heidelberg},
+	author = {Cangelosi, Angelo and Bongard, Josh and Fischer, Martin H. and Nolfi, Stefano},
+	editor = {Kacprzyk, Janusz and Pedrycz, Witold},
+	year = {2015},
+	doi = {10.1007/978-3-662-43505-2_37},
+	pages = {697--714},
 }
