--- a/main.tex
+++ b/main.tex
@@ -35,8 +35,13 @@
 \usepackage[ruled,french,frenchkw,onelanguage]{algorithm2e}
 \usepackage{mathtools}
 \usepackage{subfiles}
-
-\addbibresource{\subfix{./Biblio/biblio.bib}}
+\DefineBibliographyStrings{french}{
+  %  backrefpage={see p.},
+  backrefpage={},
+  %  backrefpages={see pp.}
+  backrefpages={}
+}
+%\addbibresource{\subfix{./Biblio/biblio.bib}}
 %\addbibresource{./Biblio/biblio.bib}
 \input{Notations.tex}
 %compile only a chapter
