--- a/thesul-cs.cls
+++ b/thesul-cs.cls
@@ -237,7 +237,7 @@
                  \fi}
 
          
-\RequirePackage[citestyle=ext-authoryear,bibstyle=authortitle, maxcitenames=2,backend=biber,doi=false,url=false,date=year,isbn=false,maxcitenames=2]{biblatex}
+\RequirePackage[citestyle=ext-authoryear,bibstyle=authortitle, maxcitenames=2,backend=biber,doi=false,url=false,date=year,isbn=false,maxcitenames=2,backref=true]{biblatex}
 \setlength\bibitemsep{1.5\itemsep}
 \RequirePackage[colorlinks = true, linkcolor = blue, urlcolor  = blue, citecolor = blue, anchorcolor = blue]{hyperref}
 \RequirePackage{subfiles}
